--- a/src/Css/LandingPage.css
+++ b/src/Css/LandingPage.css
@@ -202,6 +202,24 @@ input[type=number], select {
     border-radius: 4px;
     box-sizing: border-box;
 }
+input[type=tel], select {
+    
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=email], select {
+    
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
 .select_option {
     
     padding: 12px 20px;
