--- a/src/Css/EditProfile.css
+++ b/src/Css/EditProfile.css
@@ -8,3 +8,71 @@
     border-radius: 4px;
     box-sizing: border-box;
 }
+.Myaddress{
+       
+    
+    margin: 8px 0;
+    display: inline-block;
+    box-sizing: border-box;
+}
+.Myuniqueid{
+    margin: 8px 0;
+    display: inline-block;
+    box-sizing: border-box;
+}
+select#PaymentSelection{
+    padding: 9px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    width: 200px;
+}
+#editContact{
+    padding: 9px 10px;
+    margin: 8px 3px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    width: 200px;
+}
+#editFirstName{
+    padding: 9px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    width: 200px;
+}
+#editLastName{
+    padding: 9px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    width: 200px;
+}
+#EditProfile{
+    
+    padding-top: 30px; 
+        margin: 0 auto;
+        text-align: center;
+      
+}
+.whole-sec{
+    height: 100vh;
+    width: 100%;
+}
+.Navbar {
+    width: 100%;
+    padding: 0;
+    box-sizing: border-box;
+  }
+ 
+.sorry_small{
+    font-size: 10px;
+  }
