--- a/src/NavbarFolders/nav.css
+++ b/src/NavbarFolders/nav.css
@@ -1,12 +1,16 @@
 .navbar-wrapper {
-  background-color: aqua;
+  background-color: #0A83F0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    padding: 0 0px;
+   
     margin: 5px 5px;
     width: 100%;
+
+    
+    padding-top: 10px;
+    padding-right: 10px;
   }
   
   .nav-pills {
