--- a/src/NavbarFolders/nav.css
+++ b/src/NavbarFolders/nav.css
@@ -18,8 +18,6 @@
       justify-content: space-between;
       width: 100%;
     
-   
-    
   }
   
   .nav-account {
@@ -47,4 +45,13 @@
 }
 .full_width {
   width: 100%;
+}
+.btn-check:checked+.btn,
+.btn.active,
+.btn.show,
+.btn:first-child:active,
+:not(.btn-check)+.btn:active {
+  color: var(--bs-btn-active-color);
+  background-color: transparent;
+  border-color: var(--bs-btn-active-border-color);
 }
