--- a/src/HomePage/Homepage.css
+++ b/src/HomePage/Homepage.css
@@ -139,3 +139,47 @@
 .buttons-spacing{
     margin-bottom: 40px;
 }
+
+.leftSection{
+    margin-right: 20px;
+
+}
+.RightSection{
+    
+    width: 400px;
+}
+.bills{
+    padding-bottom: 20px;
+    border-bottom: 1px solid #989898;
+    margin-bottom: 10px;
+    color: #5C5C5C;
+}
+.paragraph-bills{
+    padding-left: 30px;
+    padding-bottom: 60px;
+}
+.paragraph{
+    padding-left: 30px;
+}
+.graph{
+    padding: 20px;
+    background-color: #F7FBFE;
+}
+.top-part{
+    background-color: #CEE6FC;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+.align-right{
+    text-align: right;
+    
+    padding-bottom: 5px;
+    
+    
+}
+.hr-width{
+    width: 200px
+}
+.button-width{
+    width: 100%;
+}
