Issue in Image of Homepage

--- a/src/Css/EditProfile.css
+++ b/src/Css/EditProfile.css
@@ -69,7 +69,8 @@ select#PaymentSelection{
 }
 .Navbar {
     width: 100%;
-    padding: 0;
+    padding: 0px;
+    margin: 0px;
     box-sizing: border-box;
   }
  
