--- a/src/NavbarFolders/nav.css
+++ b/src/NavbarFolders/nav.css
@@ -5,10 +5,10 @@
     align-items: center;
     height: 60px;
    
-    margin: 5px 5px;
+   
     width: 100%;
 
-    
+    margin: 0px;
     padding-top: 10px;
     padding-right: 10px;
   }
