--- a/src/HomePage/Homepage.css
+++ b/src/HomePage/Homepage.css
@@ -225,9 +225,10 @@
 
 .FirstBox{
     padding: 20px;
-    background: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%);
-    width: 200px;
+    background-color: #f5f5f5;
+    width: 265px;
     height:115px;
     margin-right: 20px;
     margin-bottom: 25px;
+    
 }
