--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -1,8 +1,9 @@
 .sidebar-fonts{
-    font-size: 24px;
+   height: 80px;
+   width: 140px;
     color: #8C8E8D;
-    padding-right: 0px;
-    
+    padding: 15px;
+    margin-left:18px;
     
 
 }
@@ -17,7 +18,7 @@
   
   .sidebar-link.active {
     background-color: #0A83F0;
-    border-radius: 20px;
+    border-radius: 15px;
   }
   .myfontcolor.active{
     color: #ffffff;
