Backend for User Request Form

--- a/src/Css/LandingPage.css
+++ b/src/Css/LandingPage.css
@@ -306,7 +306,7 @@ input[type=email], select {
 
   .container{
     width: 100%;
-    background-color: #f2f2f2;
+    background-color: #fff;
     padding: 20px;
   }
   .container-box{
