--- a/src/HomePage/Homepage.css
+++ b/src/HomePage/Homepage.css
@@ -233,3 +233,16 @@
     margin-bottom: 25px;
     
 }
+
+
+/* KUKL Images */
+.Kukl-image{
+    width: 319px;
+}
+.CheckoutButton{
+    width: 379px;
+}
+.Community-image{
+    width: 319px;
+    margin-left: 20px;
+}
