navigate according to the role

--- a/src/NavbarFolders/LandingNav.css
+++ b/src/NavbarFolders/LandingNav.css
@@ -4,6 +4,8 @@
     color: white;
     padding-top: 10px;
     padding-right: 10px;
+    position: fixed;
+    width: 100%;
      
 }
 /* .nav_pills {
