--- a/src/Components/form.css
+++ b/src/Components/form.css
@@ -2,9 +2,55 @@
     border: 1px solid black;
     color: black;
     padding: 3px 10px;
-    margin: 8px 0;
+    margin: 0px 0;
     
     cursor: pointer;
     width: 320px;
     height: 41px;
+}
+.MyLogoImageSection{
+    width:58%;
+    height: 745px;
+    background-color: #F5F5F5;
+    padding: 0px;
+    margin: 0px;
+    float: left;
+    display: inline;
+}
+
+.loginContainer{
+    height: 800px;
+    width: 100%;
+}
+.form{
+    width: 42%;
+    height: 100vh;
+    background-color: #F5F5F5;
+    padding-top: 104px;
+    margin: 0px;
+    float: right;
+}
+.MyLogoImage{
+    width: 100%;
+    height: 100%;
+    
+}
+.myForms{
+    background-color: red;
+}
+.ridhtalignlabel{
+    text-align: left;
+}
+.myItems{
+    margin-left: 154px;
+}
+.myforgot{
+    padding-left: 90px;
+}
+.myLogo{
+    width: 130px;
+    height: 130px;
+}
+.button-container{
+    padding-bottom: 20px;
 }
