--- a/src/Css/LandingPage.css
+++ b/src/Css/LandingPage.css
@@ -56,7 +56,11 @@ p{
     border: none;
    
 }
+.heading:hover{
+    
+    color: #0095ff;
 
+}
 .banner-section{
     padding-left: 40px;
     display: inline-block;
@@ -70,7 +74,7 @@ p{
 .paragraph_section{
     padding-left: 40px;
     padding-right: 20px;
-    padding-top: 118px;
+    padding-top: 20px;
     padding-bottom: 20px;
     font-family: 'Poppins';
     font-size: 20px;
