--- a/src/Components/form.css
+++ b/src/Components/form.css
@@ -25,7 +25,7 @@
 .form{
     width: 42%;
     height: 100vh;
-    background-color: #F5F5F5;
+    background-color: white;
     padding-top: 104px;
     margin: 0px;
     float: right;
