--- a/src/SignUp/Sign.css
+++ b/src/SignUp/Sign.css
@@ -4,12 +4,12 @@
     align-items: center;
     padding: 0px 0px;
     height: 100vh;
-    background: linear-gradient(to bottom right, #F9C89D, #6699cc);
+    background: white;
   }
 
 
   .image-container {
-    display: flex;
+    display: inline-block;
     justify-content: space-between;
     align-items: center;
     margin-top: 20px;
@@ -42,4 +42,25 @@
   }
 .select_option{
   width: 321px;
+}
+.container-fluid{
+  width: 60%;
+  height: 100vh;
+  float: left;
+  margin: 0px;
+  padding: 0px;
+}
+.MyLoginSec{
+  width: 40%;
+  height: 100vh;
+  float: right;
+  background-color: #fff;
+  padding: 20px;
+}
+.MyLogin{
+  width: 100%;
+  height: 100vh;
+  float: right;
+  background-color: #fff;
+  padding: 0px;
 }
