--- a/src/SignUp/Sign.css
+++ b/src/SignUp/Sign.css
@@ -34,23 +34,25 @@
     padding-right: 10px;
   }
   
-  .register_company{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-left: 600px;
+.register_company{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 600px;
+  width: 800px;
+}
   
-    width: 800px;
-  }
-  
-  .myForms{
-    background-color: #fff;
-    padding: 20px;
-    width: 400px;
-  }
+.myForms{
+  padding: 20px;
+  width: 400px;
+  background-color: #fff;
+}
 .select_option{
-  width: 321px;
+  padding: 12px 20px;
+  width: 222px;
+   margin: 8px 20px 8px 0px;
+
 }
 .container-fluid{
   width: 60%;
@@ -72,4 +74,35 @@
   float: right;
   background-color: #fff;
   padding: 0px;
+}
+.second-section{
+  width: 100%;
+  height: 88vh;
+  float: right;
+  background-color: #fff;
+  margin-top: 41px;
+}
+.formSection{
+  margin-left: 18px;
+    padding: 30px;
+    border: 1px solid black;
+    border-radius: 20px;
+    width: 1000px;
+    padding-left: 144px;
+  
+}
+.lastsec{
+  margin-left: 22px;
+  padding-top: 30px; 
+ 
+  width:1000px;
+  padding-left: -2px;
+}
+.myCompanyButton{
+  width: 320px;
+    height: 40px;
+    background-color: #F5F5F5;
+    color: black;
+  border-radius: 0.375rem;
+  border: none;
 }
