--- a/src/Components/form.css
+++ b/src/Components/form.css
@@ -63,3 +63,33 @@
 #passport-number{
     width: 333px;
 }
+
+.container_wrapper{
+   
+    
+    padding-left: 97px;
+    margin-left: 150px;
+}
+.formWrapper{
+    margin-left: 135px;
+    width: 60%;
+    height: 100vh;
+    padding-top: 27px;
+    /* margin: 0px; */
+    text-align: center;
+}
+.myTable{
+    width: 100%;
+    height: 100%;
+  
+}
+.myTable td{
+    width: 70%;
+}
+.MyCompanyDetails{
+    border: 1px solid black;
+    border-radius: 20px;
+    padding: 36px 100px 36px 100px;
+}
+
+
