--- a/src/SignUp/Sign.css
+++ b/src/SignUp/Sign.css
@@ -35,12 +35,8 @@
   }
   
 .register_company{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-left: 600px;
-  width: 800px;
+  
+  width: 100%;
 }
   
 .myForms{
