--- a/src/Components/form.css
+++ b/src/Components/form.css
@@ -74,7 +74,7 @@
     margin-left: 135px;
     width: 60%;
     height: 100vh;
-    padding-top: 27px;
+    /* padding-top: 27px; */
     /* margin: 0px; */
     text-align: center;
 }
