--- a/src/SignUp/Sign.css
+++ b/src/SignUp/Sign.css
@@ -90,15 +90,33 @@
 .lastsec{
   margin-left: 22px;
   padding-top: 30px; 
- 
   width:1000px;
   padding-left: -2px;
 }
 .myCompanyButton{
   width: 320px;
-    height: 40px;
-    background-color: #F5F5F5;
-    color: black;
+  height: 40px;
+  background-color: #F5F5F5;
+  color: black;
   border-radius: 0.375rem;
   border: none;
+}
+
+.spacingH4{
+  padding-left: 140px;
+  margin-top: 20px;
+
+}
+.spacingH4Payment{
+  text-align: left;
+  margin-top: 20px;
+
+}
+.form-check-label{
+  text-align: left;
+}
+.form-check{
+  padding-top: 20px;
+  padding-left: 41px;
+
 }
