--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -7,18 +7,21 @@
     
 
 }
+.sidebar{
+  background-color: #F9F9F9;
+}
 
 
 .sidebar-section{
+  height: 100vh;
     
 }
 .sidebar-link {
-    background-color: #ffffff;
+    /*   */
   }
   
   .sidebar-link.active {
-    background-color: #0A83F0;
-    border-radius: 15px;
+   color: #0A83F0;
   }
   .myfontcolor.active{
     color: #ffffff;
@@ -26,3 +29,6 @@
   .sidebar-link.active > p {
     color: white;
   }
+
+ 
+
