--- a/src/HomePage/Homepage.css
+++ b/src/HomePage/Homepage.css
@@ -8,7 +8,6 @@
 .right{
     float: right;
     width: 1284px;
-    padding-top: 40px;
     display: inline;
     padding-right: 43px;
 }
@@ -154,7 +153,7 @@
 }
 .RightSection{
     
-    width: 400px;
+    width: 463px;
 }
 .bills{
     padding-top: 8px;
@@ -257,4 +256,24 @@
     height: 50px;
     width: 70px;
     margin-top: 9px;
+}
+
+
+.backgroundSpace{
+    border-radius: 11px;
+    background-color: #f5f5f5;
+    padding: 20px;
+    box-shadow: 0px 0px 12px 0px #00000040;
+}
+.main-box{
+    border-radius: 10px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 64px;
+    background-color: white;
+    padding-top: 18px;
+    padding-bottom: 18px;
+
+}
+.i-understand{
+    box-shadow: 0px 0px 12px 0px #00000040;
 }
