--- a/src/NavbarFolders/nav.css
+++ b/src/NavbarFolders/nav.css
@@ -2,7 +2,7 @@
   border-bottom: 2.5px solid #F5F5F5;
   display: flex;
   justify-content: space-between;
-
+  background-color: #CEE6FC;
   height: 60px;
   width: 100%;
   margin: 0px;
