--- a/src/Admin/MeterReader.css
+++ b/src/Admin/MeterReader.css
@@ -4,3 +4,24 @@
     font-size: 12px;
     padding-left: 200px;
 }
+.meterButtons{
+    width: 180px;
+    border: none;
+    background-color: #F5F5F5;
+    color: #2F4858;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    margin-right: 20px;
+}
+.meterButtons2{
+    width: 180px;
+    border: none;
+    background-color: #0A83F0;
+    color: white;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+}
