--- a/src/Admin/MainBox.css
+++ b/src/Admin/MainBox.css
@@ -1,3 +1,13 @@
 .main-box{
-    
+
+}
+.firstbox{
+    padding: 20px;
+    background-color: #f5f5f5;
+    width: 312px;
+    height: 98px;
+    margin-right: 20px;
+    margin-bottom: 25px;
+    border-radius: 11px;
+    box-shadow: 0px 0px 12px 0px #00000040;
 }
