--- a/src/Admin/MeterReader.css
+++ b/src/Admin/MeterReader.css
@@ -25,3 +25,32 @@
     font-style: normal;
     font-weight: 700;
 }
+.meter-table{
+    width: 100%;
+    
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-radius: 20px;
+    margin-top: 20px;
+    /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); */
+}
+.myTables{
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-radius: 20px;
+    margin-top: 20px;
+    background-color: #FAFAFA;
+    padding: 20px 60px 60px 60px;
+    
+}
+table tr th{
+    color: #2F4858;
+}
+.meterReader-table{
+    align-items: center;
+    width:90%;
+    margin-right:40px;
+    padding: 30px;
+    border: 1px solid blue;
+}
