--- a/src/Admin/MeterReader.css
+++ b/src/Admin/MeterReader.css
@@ -15,7 +15,11 @@
     font-weight: 700;
     margin-right: 20px;
 }
-.meterButtons2{
+.meterButtons:hover{
+    color: #2F4858;
+    background-color: #e0e0e0;
+}
+ .meterButtons2  {
     width: 180px;
     border: none;
     background-color: #0A83F0;
@@ -24,7 +28,15 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
+    margin-right: 20px;
+
+
 }
+.meterButtons2:hover  {
+   
+    background-color: #0866b9;
+}
+
 .meter-table{
     width: 100%;
     
@@ -42,6 +54,7 @@
     margin-top: 20px;
     background-color: #FAFAFA;
     padding: 20px 60px 60px 60px;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
     
 }
 table tr th{
@@ -55,9 +68,10 @@ table tr th{
     padding: 30px;
     border-radius: 20px;
     border-collapse: collapse;
-    border: 2px solid black; /* outer border */
+    border: 2px solid #0A83F0; /* outer border */
 }
 .meterReader-table td, .meter-Table th{
     border: none;
 }
+
 
