--- a/src/Admin/AdminDash.css
+++ b/src/Admin/AdminDash.css
@@ -5,3 +5,26 @@
     width: 1328px;
     padding: 30px;
 }
+.right-width{
+    align-items: center;
+    width: 85%;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    background-color: #F9F9F9;
+    border-radius: 11px;
+    height: 560px;
+    margin-left: 101px;
+    margin-right: 101px;
+}
+.headingBorder{
+    padding: 14px;
+    border-bottom: 2px solid #2F4858;
+}
+.inputBox{
+    width: 400px;
+}
+#submitSchedule{
+    width: 824px;
+    justify-content: center;
+    display: flex;
+    margin-left: 117px;
+}
