--- a/src/Components/form.css
+++ b/src/Components/form.css
@@ -85,11 +85,22 @@
 }
 .myTable td{
     width: 70%;
+    text-align: left;
 }
 .MyCompanyDetails{
     border: 1px solid black;
     border-radius: 20px;
     padding: 36px 100px 36px 100px;
+}
+.selectOption{
+    width: 318px;
+    padding: 10px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: rgba(0, 0, 0, 0.4);
 }
 
 .form-check-labels{
