--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -60,6 +60,9 @@
   display: flex;
     align-items: center; /* vertically center the items */
     flex-wrap: nowrap; /* prevent wrapping */
-  }
- 
+}
+.myProfilePic{
+  width: 30px;
+  height: 30px;
+} 
 
