--- a/src/SignUp/Sign.css
+++ b/src/SignUp/Sign.css
@@ -101,6 +101,11 @@
   border-radius: 0.375rem;
   border: none;
 }
+button.myCompanyButton:hover {
+  
+  background-color: #dedede;
+  
+}
 
 .spacingH4{
   padding-left: 140px;
