--- a/src/Css/LandingPage.css
+++ b/src/Css/LandingPage.css
@@ -269,6 +269,13 @@ input[type=submit] {
     border-radius: 4px;
     cursor: pointer;
 }
+#contact-submit[disabled] {
+  pointer-events: none;
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+
 input[type=date] {
   padding: 12px 44px;
   margin: 8px 0;
@@ -277,116 +284,104 @@ input[type=date] {
   border-radius: 4px;
     box-sizing: border-box;
 }
+
+/* footer section */
+.footer-section{
+  height: 100px;
+  width: 100%;
+  background-color: black;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  display: inline-block;
+}
+.footer-section p{
+  font-size: 12px;
+  text-align: center;
+  color: white;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+.rights{
+  padding-top: 10px;
+}
+
+
+/* user section */
+.container{
+  width: 100%;
+  background-color: #fff;
+  padding-left: 49px;
+  padding-right: 0;
+  margin-left: 225px;
+  margin-right: 30px;
+}
+
+.container-box{
+  padding: 70px;
+  margin: 60px;
+  width: 200px;
+}
+#my-button {
+  background-color: #0095ff; /*Change color to blue*/
+  color: white; /*Change text color to white*/
+  font-size: 20px; /*Change font size to 20px*/
+  padding: 10px 20px; /*Add padding to increase button size*/
+  width: 200px;
+}
+.spacing{
+  margin: 20px;
+}
+input[type=text], select .spacing {
+  margin-right: 20px;
+}
+input[type=tel], select .spacing {
+  margin-right: 20px;
+}
+input[type=number], select .spacing {
+  margin-right: 20px;
+}
+input[type=file], select .spacing {
+  margin-right: 20px;
+}
+#myemail{
+  width: 710px;
+}
+.goBack{
+  background-color: #F5F5F5; /*Change color to blue*/
+  color: black; /*Change text color to white*/
+  font-size: 20px; /*Change font size to 20px*/
+  padding: 10px 20px; /*Add padding to increase button size*/
+  width: 200px;
+  border: none;
+  border-radius: 4px;
   
-input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  .address-section{
-
-  }
-  .form-section{
-    
-  }
-
-
-  /* footer section */
-  .footer-section{
-    height: 100px;
-    width: 100%;
-    background-color: black;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    display: inline-block;
-  }
-  .footer-section p{
-    font-size: 12px;
-    text-align: center;
-    color: white;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
-  }
-  .rights{
-    padding-top: 10px;
-  }
-
-
-  /* user section */
-
-  .container{
-    width: 100%;
-    background-color: #fff;
-    padding-left: 49px;
-    padding-right: 0;
-    margin-left: 225px;
-    margin-right: 30px;
 }
   
-  .container-box{
-    padding: 70px;
-    margin: 60px;
-    width: 200px;
-  }
-  #my-button {
-    background-color: #0095ff; /*Change color to blue*/
-    color: white; /*Change text color to white*/
-    font-size: 20px; /*Change font size to 20px*/
-    padding: 10px 20px; /*Add padding to increase button size*/
-    width: 200px;
-  }
-  .spacing{
-    margin: 20px;
-  }
-  input[type=text], select .spacing {
-    margin-right: 20px;
-  }
-  input[type=tel], select .spacing {
-    margin-right: 20px;
-  }
-  input[type=number], select .spacing {
-    margin-right: 20px;
-  }
-  input[type=file], select .spacing {
-    margin-right: 20px;
-  }
-  #myemail{
-    width: 710px;
-  }
-  .goBack{
-    background-color: #F5F5F5; /*Change color to blue*/
-    color: black; /*Change text color to white*/
-    font-size: 20px; /*Change font size to 20px*/
-    padding: 10px 20px; /*Add padding to increase button size*/
-    width: 200px;
-    border: none;
-    border-radius: 4px;
-    
-  }
+#first-name{
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-right: 5px;
   
-  /* #first-name{
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-right: 5px;
-    
-  }
-  #last-name{
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    
-  } */
-  /* #houseNo{
-    padding: 12px 70px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    
-  } */
+}
+#last-name{
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  
+}
+#houseNo{
+  padding: 12px 70px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  
+}
