--- a/src/Admin/MeterReader.css
+++ b/src/Admin/MeterReader.css
@@ -100,3 +100,15 @@ input[type=submit],.submitSchedule{
    
     text-align: center;
 }
+.DeletePopOver{
+    width: 500px;
+    margin-left: 500px;
+    margin-right: 500px;
+}
+.main-box2 {
+   display: flex;
+   justify-content: center;
+    padding: 20px;
+    margin-top: 20px;
+}
+    
