--- a/src/Admin/AdminDash.css
+++ b/src/Admin/AdminDash.css
@@ -1,9 +1,23 @@
 .right-right-nav-Home2{
-    margin-top: 59px;
+    margin-top: 20px;
     float: right;
     height: 100%;
     width: 1328px;
     padding: 30px;
+}
+.MyDash{
+    margin-top: 20px;
+   
+    height: 100%;
+    width: 1328px;
+    padding: 30px;
+}
+.right-right-nav-Home3{
+    
+    float: right;
+    height: 100%;
+    width: 1328px;
+    
 }
 .right-width{
     align-items: center;
