--- a/src/Admin/MeterReader.css
+++ b/src/Admin/MeterReader.css
@@ -71,6 +71,17 @@
     margin-top: 20px;
     background-color: #FAFAFA;
     padding: 20px 60px 60px 60px;
+    
+    
+}
+.myTables2{
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-radius: 20px;
+    margin-top: 20px;
+    background-color: #FAFAFA;
+
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
     
 }
