--- a/src/HomePage/Homepage.css
+++ b/src/HomePage/Homepage.css
@@ -22,7 +22,7 @@
 .containerHome{
     width: 100%;
     margin: 0px;
-    height: 750px;
+    height: 100%;
     /* text-align: center; */
   }
 .center{
