--- a/src/Admin/MeterReader.css
+++ b/src/Admin/MeterReader.css
@@ -85,6 +85,17 @@
     box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
     
 }
+.MyScheduleBorder{
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    border-radius: 20px;
+    margin-top: 20px;
+    background-color: #FAFAFA;
+    padding-top: 20px;
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+    
+}
 table tr th{
     
     color: #2F4858;
@@ -122,4 +133,27 @@ input[type=submit],.submitSchedule{
     padding: 20px;
     margin-top: 20px;
 }
+.main-Table{
+    float: left;
+
+}
+.main-Table2{
+    float: right;
+
+}
+
+.MyClass{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 30px;
+    border-radius: 20px;
     
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
+ }
+ .MyColor{
+     color: #2F4858;
+     margin-right: 10px;
+ }
+ .inputBox{
+    width: 400px;
+}
