--- a/src/Css/Sidebar.css
+++ b/src/Css/Sidebar.css
@@ -33,6 +33,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding-bottom: 30px;
 }
 
 
@@ -41,6 +42,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  margin-bottom: 30px;
 }
     
 
@@ -84,4 +86,11 @@
 .myCancelButton:hover{
   background-color: gray;
 
+}
+.leftnav{
+    float: left;
+    width: 190px;
+    height: 100%;
+    position: fixed;
+    border-right: 2.5px solid #F5F5F5;
 }
