--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,30 @@ body {
   color: #2F4858;
   border-radius: 20px;
 }
+.downloadHistory, Text{
+ padding: 30px;
+ font-size: 11px;
+ font-weight: 500;
+}
+.bold-text {
+  font-weight: bold;
+}
+.historyTable {
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  padding: 20px;
+}
+.historyTable2 {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+}
+.bill{
+  margin: 20px;
+  border-radius: 20px;
+  background-color: rgb(238, 238, 238);
+  padding: 10px;
+  
+}
