--- a/src/Css/Table.css
+++ b/src/Css/Table.css
@@ -30,4 +30,15 @@
   margin: 30px;
   padding: 40px;
 }
+.HistoryTableCss{
+  align-items: center;
+  
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  background-color: #F9F9F9;
+  border-radius: 11px;
+  
+  margin-left: 101px;
+  
+  padding: 40px;
+}
 
