--- a/src/Css/LandingPage.css
+++ b/src/Css/LandingPage.css
@@ -66,7 +66,7 @@ p{
     display: inline-block;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 744px;
+    height: 100vh;
     width: 100%;
     margin-bottom: 28px;
    
