--- a/src/Admin/MeterReader.css
+++ b/src/Admin/MeterReader.css
@@ -102,10 +102,7 @@ table tr th{
     color: #2F4858;
 }
 .meterReader-table{
-    align-items: center;
-    width:90%;
-    margin-right:40px;
-    padding: 30px;
+    margin: 10px;
     border-radius: 20px;
     border-collapse: collapse;
     border: 2px solid #0A83F0; /* outer border */
