--- a/src/Css/Table.css
+++ b/src/Css/Table.css
@@ -31,14 +31,13 @@
   padding: 40px;
 }
 .HistoryTableCss{
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  
+  padding: 20px;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   background-color: #F9F9F9;
   border-radius: 11px;
-  
-  margin-left: 101px;
-  
-  padding: 40px;
 }
 
