--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,9 @@ body {
   margin-top: 10px;
   text-align: right;
 }
+.buttonAlign button {
+  margin: 5px;
+}
 .PaySectionPlease{
   padding: 20px;
   background-color: #FAFAFA;
